--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@heroicons/vue": "^2.0.13",
     "@nuxt/content": "^2.2.2",
+    "@nuxt/image-edge": "^1.0.0-27821548.ab054e4",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "@tailwindcss/typography": "^0.5.8",
     "nuxt": "3.0.0"
